Code/Services, Load Balancing, Networking/Ingress/3/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: my-app:1.0.0
        ports:
        - containerPort: 80
