Code/Services, Load Balancing, Networking/Ingress/3/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: foo-service
          servicePort: 80
  - http:
      paths:
      - path: /bar
        backend:
          serviceName: bar-service
          servicePort: 80
